# starquad

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/accel2d/: mod.rs  reference.rs
src/geom/: interval.rs  mod.rs  p2.rs  rect.rs
